# gnomad-mcp

./: .gitignore  README.md  README_tests.md  pyproject.toml  server.py
gnomad/: __init__.py  query.py  schema.py  schema2query.py
gnomad/queries/: v2.py  v3.py  v4.py
gnomad/queries/v2/: clinvar_variant.graphql  copy_number_variant.graphql  gene.graphql  liftover.graphql  meta.graphql  multiNucleotideVariant.graphql  region.graphql  short_tandem_repeat.graphql  transcript.graphql  variant.graphql  variant_cooccurrence.graphql  variant_search.graphql
gnomad/queries/v3/: mitochondrial_variant.graphql  multiNucleotideVariant.graphql  region.graphql  short_tandem_repeat.graphql  short_tandem_repeats.graphql
gnomad/queries/v4/: gene.graphql  mitochondrial_variant.graphql  multiNucleotideVariant.graphql  region.graphql  short_tandem_repeat.graphql  short_tandem_repeats.graphql  structural_variant.graphql  transcript.graphql  variant.graphql  variant_cooccurrence.graphql  variant_search.graphql
gnomad/schemas/: schema_analyzer.py  schema_fetcher.py
tests/: run_test_server.sh  test_run_queries.sh  test_server.py
tests/input/: __init__.py  test_params.py  test_params_v2.py  test_params_v3.py  test_params_v4.py
tests/input/analyzed_schemas/: query_field_map.json
tests/input/schema2query/: clinvar_variant.graphql  gene.graphql  gene_search.graphql  liftover.graphql  mitochondrial_variant.graphql  multiNucleotideVariant.graphql  short_tandem_repeat.graphql  short_tandem_repeats.graphql  (+3 more)
tests/scripts/: analyze_schemas.sh  fetch_schemas.sh  schema2query.sh
(+1 files in other folders)
