[project]
name = "gnomad-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "fastmcp>=2.2.1",
    "gql>=3.5.2",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "nest-asyncio>=1.6.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
